Heroku freshly backedup b005. Fixing mobile view landing page looks better. Hamburger menu fits all the way to iphone5 screen size fine and scrolls nice, made the hamburger buttons a little smaller and thinner. Added new class to login.hnl login_wrapper so could make it more responsive on mobile looks good now functions great as well.

--- a/staticfiles/core/css/styles.css
+++ b/staticfiles/core/css/styles.css
@@ -317,7 +317,6 @@ main{
     justify-content: center;
 }
 
-
 /*Homepage SECTION END*/
 /*******************/
 
@@ -768,7 +767,6 @@ footer {
     width: 100%;
     grid-template-columns: 1fr;
     gap: 1rem;
-    padding: 1rem;
     margin: 0 auto;
     background-color: var(--bg-secondary);
     border-radius: 0.75rem;
@@ -1136,7 +1134,20 @@ footer {
 
 /*Privacy Page END*/
 /*******************/
-
+/*LOGIN Page START*/
+/*******************/
+.login_wrapper{
+    width: 50%; /* Equivalent to w-1/2 */
+    margin-top: 1.5rem; /* Equivalent to my-6 */
+    margin-bottom: 1.5rem; /* Equivalent to my-6 */
+    margin-left: auto; /* Equivalent to mx-auto */
+    margin-right: auto; /* Equivalent to mx-auto */
+    padding: 1.5rem; /* Equivalent to p-6 */
+    background-color: #f7fafc; /* Equivalent to bg-gray-100 */
+    border-radius: 0.75rem;
+}
+/*LOGIN Page END*/
+/*******************/
 /*******************/
 /*MEDIA QUERIES START*/
 /*******************/
@@ -1190,20 +1201,21 @@ img.logo {
 
 .hamburger {
     cursor: pointer;
-    width: 35px;
-    height: 30px;
+    width: 20px;
+    height: 25px;
   /*  position: relative; */
     margin: 10px;
     position: fixed; /* Use fixed positioning */
     top: 10px; /* Distance from the top */
     right: 10px; /* Distance from the right */
     margin: 10px;
+    margin-top: 0px;
     z-index: 1000;
 }
 
 .bar {
-    height: 5px;
-    margin: 5px 0;
+    height: 2px;
+    margin: 6px 0;
     transition: all 0.3s ease;
     border-radius: 12px;
 }
@@ -1221,7 +1233,7 @@ img.logo {
 }
 
 #nav-links{
-    margin-top: 20px;
+    margin-top: 0px;
 }
 
 .nav-links {
@@ -1251,7 +1263,7 @@ img.logo {
 
 .nav-links li {
     width: 100%; /* Each link takes full width */
-    margin-bottom: 10px; /* Space between links */
+    margin-bottom: 0px; /* Space between links */
 }
 
 .nav-links a {
@@ -1280,7 +1292,7 @@ img.logo {
 /* Animation for the bars */
 .bar1.active {
     transform: rotate(45deg) translate(6px, 6px); /* Adjusted for better X shape */
-    width: 34px;
+    width: 20px;
 }
 
 .bar2.active {
@@ -1288,7 +1300,7 @@ img.logo {
 }
 
 .bar3.active {
-    transform: rotate(-45deg) translate(7px, -6px); /* Adjusted for better X shape */
+    transform: rotate(-45deg) translate(6px, -6px); /* Adjusted for better X shape */
  }
 }
 /* Initially hide the hamburger button */
@@ -1306,8 +1318,13 @@ img.logo {
     grid-gap: 20px;
     padding: 40px; 
     margin: 10px auto;
+    }
 }
 
+@media only screen and (max-width: 767px) {
+.sponsor_statement_in_sponsor_sections{
+    font-size: 24px;
+    }
 }
 
 @media only screen and (max-width: 740px) {
@@ -1326,7 +1343,12 @@ img.logo {
  
 }
 }
-
+@media only screen and (max-width: 687px) {
+.sponsor_statement_in_sponsor_sections{
+    font-size: 20px;
+    font-weight: 600;
+    }
+}
 @media only screen and (max-width: 656px) {
 #main_wrapper_items_page{
     width: 100%;
@@ -1339,10 +1361,9 @@ img.logo {
 }
 }
 
-  @media only screen and (max-width: 625px) {
+@media only screen and (max-width: 625px) {
 /****CONVERSATION*START****/
 /*******************/
-
 #new_convo_wrapper{
     display: grid;
     max-width: 420px;
@@ -1390,29 +1411,33 @@ img.logo {
 }
 /*******************/
 /****CONVERSATION*END****/
-
+@media only screen and (max-width: 610px) {
+.sponsor_statement_in_sponsor_sections{
+    font-size: 20px;
+    font-weight: 600;
+    }
+}
 
 /*Small Screens for bottom icon bar*/
 @media only screen and (max-width: 600px) {
-    .aside {
-        bottom: 0;
-        width: 100vw;
-        height: 5rem;
-        transition: width 600ms ease;
-    }
-    .sidebar-logo {
-        display: none;
-    }
-    #sidebar {
-        flex-direction: row;
-    }
-    .sidebar-link {
-        justify-content: center;
-    }
-    main {
-        margin: 0;
-    }
-
+.aside {
+    bottom: 0;
+    width: 100vw;
+    height: 5rem;
+    transition: width 600ms ease;
+}
+.sidebar-logo {
+    display: none;
+}
+#sidebar {
+    flex-direction: row;
+}
+.sidebar-link {
+    justify-content: center;
+}
+main {
+    margin: 0;
+}
 
 .signup_form_wrapper{
     width: 90%; 
@@ -1421,10 +1446,8 @@ img.logo {
     margin-left: auto; 
     margin-right: auto;
     padding: 1.5rem;
+    }
 }
-  
-}
-
 /* LARGE SCREENS for bottom icon bar*/
 @media only screen and (min-width: 600px) {
     .aside {
@@ -1459,8 +1482,37 @@ img.logo {
     display: none;
 }
 }
+
+@media only screen and (max-width: 530px) {
+    .sponsor_statement_in_sponsor_sections{
+        font-size: 18px;
+        font-weight: 600;
+        
+        }
+    }
+
+@media only screen and (max-width: 420px) {
+#how_to_sponsor_container{
+    gap: 10px;
+    padding: 1rem;
+}
+.login_wrapper{
+    width: 90%; /* Equivalent to w-1/2 */
+    margin-top: 1rem; /* Equivalent to my-6 */
+    padding: 1.5rem; /* Equivalent to p-6 */
+}
+}
+
+@media only screen and (min-width: 350px) {
+    .sponsor_statement_in_sponsor_sections{
+        gap: .5rem;
+        margin: 0 auto;
+        padding: .5rem;
+    }
+}
+
+
 @media only screen and (max-width: 350px) {
-   
 .grid_holding_eight_item_cards{
     display: grid;
     height: auto;
@@ -1483,6 +1535,13 @@ img.logo {
     justify-items: center;
     padding-left: 5px;
     padding-right: 5px;
+}
+
+
+.sponsor_statement_in_sponsor_sections{
+    gap: .5rem;
+    margin: 0 auto;
+    padding: .5rem;
 }
 }
 
